Integra screenshots SVG al carrusel de ejemplos y archivos templates

--- a/ejemplos/estilo-data-driven.html
+++ b/ejemplos/estilo-data-driven.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estilo Data-driven ¬∑ Gu√≠a Visual</title>
+  <title>Estilo Data-driven ∑ GuÌa Visual</title>
   <style>
     :root { --fondo:#F0F4F8; --acento:#A4D2F4; --texto:#2E3A46; --sec:#3B4758; }
     body{margin:0;font-family:'Inter',system-ui,sans-serif;background:var(--fondo);color:var(--texto);} .wrap{max-width:1040px;margin:0 auto;padding:32px 20px 72px;}
@@ -14,17 +14,18 @@
 <body>
   <div class="wrap">
     <div class="hero">
-      <div class="eyebrow">Estilos de P√°ginas de Venta</div>
+      <div class="eyebrow">Estilos de P·ginas de Venta</div>
       <h1>Data-driven</h1>
       <p class="lead">Ficha orientada a specs con tablas comparativas y KPIs en el primer scroll.</p>
-      <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=1400&q=80" alt="Dashboard comparativo mobile y desktop">
+      <img src="../screenshots/estilo-data-driven.svg" alt="Dashboard comparativo mobile y desktop">
     </div>
     <div class="grid">
       <div class="card"><h3>Tabla inmediata</h3><p>Comparativa de features arriba, con sellos de confianza y seguridad.</p></div>
-      <div class="card"><h3>KPIs visibles</h3><p>M√©tricas clave (latencia, bater√≠a, certificaciones) con iconos claros.</p></div>
-      <div class="card"><h3>CTA comparar</h3><p>Bot√≥n para ver comparativa completa y segundo CTA para comprar ahora.</p></div>
+      <div class="card"><h3>KPIs visibles</h3><p>MÈtricas clave (latencia, baterÌa, certificaciones) con iconos claros.</p></div>
+      <div class="card"><h3>CTA comparar</h3><p>BotÛn para ver comparativa completa y segundo CTA para comprar ahora.</p></div>
     </div>
-    <a class="back" href="../index.html#sales-styles">‚Üê Volver</a>
+    <a class="back" href="../index.html#sales-styles">? Volver</a>
   </div>
 </body>
 </html>
+
