--- a/ejemplos/estilo-social-proof.html
+++ b/ejemplos/estilo-social-proof.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estilo Social Proof ¬∑ Gu√≠a Visual</title>
+  <title>Estilo Social Proof ∑ GuÌa Visual</title>
   <style>
     :root { --fondo:#F0F4F8; --acento:#A4D2F4; --texto:#2E3A46; --sec:#3B4758; }
     body{margin:0;font-family:'Inter',system-ui,sans-serif;background:var(--fondo);color:var(--texto);} .wrap{max-width:1040px;margin:0 auto;padding:32px 20px 72px;}
@@ -14,17 +14,18 @@
 <body>
   <div class="wrap">
     <div class="hero">
-      <div class="eyebrow">Estilos de P√°ginas de Venta</div>
+      <div class="eyebrow">Estilos de P·ginas de Venta</div>
       <h1>Social Proof</h1>
-      <p class="lead">Autoridad temprana con rese√±as, badges de prensa y UGC en el primer scroll.</p>
-      <img src="https://images.unsplash.com/photo-1582719478215-d152b9c1dc4c?auto=format&fit=crop&w=1400&q=80" alt="Social proof en UI mobile y desktop">
+      <p class="lead">Autoridad temprana con reseÒas, badges de prensa y UGC en el primer scroll.</p>
+      <img src="../screenshots/estilo-social-proof.svg" alt="Social proof en UI mobile y desktop">
     </div>
     <div class="grid">
-      <div class="card"><h3>Rese√±as upfront</h3><p>Carrusel de citas cortas y rating promedio destacado.</p></div>
+      <div class="card"><h3>ReseÒas upfront</h3><p>Carrusel de citas cortas y rating promedio destacado.</p></div>
       <div class="card"><h3>Insignias y prensa</h3><p>Logos de medios y certificaciones visibles sin hacer scroll.</p></div>
       <div class="card"><h3>UGC + fotos reales</h3><p>Bloque de fotos de clientes y preguntas frecuentes contestadas.</p></div>
     </div>
-    <a class="back" href="../index.html#sales-styles">‚Üê Volver</a>
+    <a class="back" href="../index.html#sales-styles">? Volver</a>
   </div>
 </body>
 </html>
+
