--- a/ejemplos/template-eco.html
+++ b/ejemplos/template-eco.html
@@ -792,7 +792,7 @@
     <header>
         <nav>
             <div class="nav-left">
-                <div class="logo">☀️ SUNRUN</div>
+                <div class="logo">?? SUNRUN</div>
                 <ul class="nav-menu">
                     <li><a href="#residential">Residential</a></li>
                     <li><a href="#commercial">Commercial</a></li>
@@ -802,7 +802,7 @@
             </div>
             <div class="nav-right">
                 <a href="tel:+18006566796" class="nav-phone">1-800-SUNRUN-1</a>
-                <a href="../index.html#templates-section" class="nav-back">← Volver a demos</a>
+                <a href="../index.html#templates-section" class="nav-back">? Volver a demos</a>
                 <button class="nav-cta">GET QUOTE</button>
             </div>
         </nav>
@@ -816,19 +816,19 @@
                 <p>Save on electricity costs. Go solar. Join the solar revolution.</p>
                 <div class="value-props">
                     <div class="value-prop">
-                        <div class="value-prop-icon">✓</div>
+                        <div class="value-prop-icon">?</div>
                         <div class="value-prop-text"><strong>Save on electric bills</strong> with affordable monthly solar payments</div>
                     </div>
                     <div class="value-prop">
-                        <div class="value-prop-icon">✓</div>
+                        <div class="value-prop-icon">?</div>
                         <div class="value-prop-text"><strong>25-year warranty</strong> on solar panels and equipment</div>
                     </div>
                     <div class="value-prop">
-                        <div class="value-prop-icon">✓</div>
+                        <div class="value-prop-icon">?</div>
                         <div class="value-prop-text"><strong>No money down</strong> with flexible financing options</div>
                     </div>
                     <div class="value-prop">
-                        <div class="value-prop-icon">✓</div>
+                        <div class="value-prop-icon">?</div>
                         <div class="value-prop-text"><strong>24/7 monitoring</strong> and professional installation included</div>
                     </div>
                 </div>
@@ -838,7 +838,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1509391366360-2e959784a276?w=600&h=700&fit=crop&q=85" alt="Residential solar panels on roof">
+                <img src="../screenshots/template-eco.svg" alt="Template Preview">
             </div>
         </div>
     </section>
@@ -856,17 +856,17 @@
             <h2 class="section-title">Why Go Solar With Sunrun</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">💰</div>
+                    <div class="feature-icon">??</div>
                     <h3>Reduce Your Bills</h3>
                     <p>Save money on your electricity bills from day one. Most Sunrun customers save thousands over their contract period.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🔒</div>
+                    <div class="feature-icon">??</div>
                     <h3>Peace of Mind</h3>
                     <p>Our 25-year warranty covers panels, equipment, and repairs. We handle all monitoring and maintenance.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🌍</div>
+                    <div class="feature-icon">??</div>
                     <h3>Go Green</h3>
                     <p>Reduce your carbon footprint while supporting renewable energy. Generate clean power for your home.</p>
                 </div>
@@ -1092,3 +1092,4 @@
     </script>
 </body>
 </html>
+
