--- a/ejemplos/template-premium.html
+++ b/ejemplos/template-premium.html
@@ -679,7 +679,7 @@
                 <li><a href="#environment">Environment</a></li>
             </ul>
             <div class="nav-right">
-                <a href="../index.html#templates-section" class="nav-back">← Back to Demos</a>
+                <a href="../index.html#templates-section" class="nav-back">? Back to Demos</a>
                 <button class="nav-cta">Buy Now</button>
             </div>
         </nav>
@@ -696,7 +696,7 @@
                 <button class="btn btn-secondary">Buy Now</button>
             </div>
             <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=1200&h=700&fit=crop&q=85" alt="Premium Pro">
+                <img src="../screenshots/template-premium.svg" alt="Template Preview">
             </div>
         </div>
     </section>
@@ -706,10 +706,10 @@
         <div class="section-content">
             <h2>Stunning Design</h2>
             <p>Precision engineering meets elegant aesthetics. Every detail is crafted to inspire.</p>
-            <a href="#">Explore design →</a>
+            <a href="#">Explore design ?</a>
         </div>
         <div class="section-image">
-            <img src="https://images.unsplash.com/photo-1517836357463-d25ddfcbf042?w=600&h=600&fit=crop&q=85" alt="Design">
+            <img src="../screenshots/template-premium.svg" alt="Design">
         </div>
     </section>
 
@@ -717,10 +717,10 @@
         <div class="section-content">
             <h2>Powerful Performance</h2>
             <p>Built for professionals who demand the best. Advanced technology at every level.</p>
-            <a href="#">Discover performance →</a>
+            <a href="#">Discover performance ?</a>
         </div>
         <div class="section-image">
-            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=600&fit=crop&q=85" alt="Performance">
+            <img src="../screenshots/template-premium.svg" alt="Performance">
         </div>
     </section>
 
@@ -728,10 +728,10 @@
         <div class="section-content">
             <h2>Seamless Integration</h2>
             <p>Works beautifully with your entire creative workflow. Everything just works.</p>
-            <a href="#">Learn about integration →</a>
+            <a href="#">Learn about integration ?</a>
         </div>
         <div class="section-image">
-            <img src="https://images.unsplash.com/photo-1511376979264-c8ae135b11d0?w=600&h=600&fit=crop&q=85" alt="Integration">
+            <img src="../screenshots/template-premium.svg" alt="Integration">
         </div>
     </section>
 
@@ -742,7 +742,7 @@
             <div class="showcase-grid">
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="https://images.unsplash.com/photo-1503387762519-52582b742d5d?w=400&h=400&fit=crop&q=85" alt="Feature">
+                        <img src="../screenshots/template-premium.svg" alt="Feature">
                     </div>
                     <div class="showcase-content">
                         <h3>Advanced Materials</h3>
@@ -752,7 +752,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="https://images.unsplash.com/photo-1561070791-2526d30994b5?w=400&h=400&fit=crop&q=85" alt="Feature">
+                        <img src="../screenshots/template-premium.svg" alt="Feature">
                     </div>
                     <div class="showcase-content">
                         <h3>Remarkable Display</h3>
@@ -762,7 +762,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="https://images.unsplash.com/photo-1505228395891-9a51e7e86e81?w=400&h=400&fit=crop&q=85" alt="Feature">
+                        <img src="../screenshots/template-premium.svg" alt="Feature">
                     </div>
                     <div class="showcase-content">
                         <h3>All-Day Battery</h3>
@@ -772,7 +772,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="https://images.unsplash.com/photo-1552083974-5dde3cf4e715?w=400&h=400&fit=crop&q=85" alt="Feature">
+                        <img src="../screenshots/template-premium.svg" alt="Feature">
                     </div>
                     <div class="showcase-content">
                         <h3>Thermal Design</h3>
@@ -815,17 +815,17 @@
             <p class="design-subtitle">Built with precision and care</p>
             <div class="design-grid">
                 <div class="design-card">
-                    <div class="design-icon">✨</div>
+                    <div class="design-icon">?</div>
                     <h3>Refined</h3>
                     <p>Every curve, every edge, every detail refined to perfection. Simplicity through careful design.</p>
                 </div>
                 <div class="design-card">
-                    <div class="design-icon">⚙️</div>
+                    <div class="design-icon">??</div>
                     <h3>Engineered</h3>
                     <p>Precision engineering meets innovative technology. Built to last and perform.</p>
                 </div>
                 <div class="design-card">
-                    <div class="design-icon">🎯</div>
+                    <div class="design-icon">??</div>
                     <h3>Purposeful</h3>
                     <p>Everything has a purpose. Nothing is there by accident. Function and form in harmony.</p>
                 </div>
@@ -844,7 +844,7 @@
                     <p>Recycled materials, responsible sourcing, and renewable energy throughout our supply chain.</p>
                 </div>
                 <div class="environment-image">
-                    <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=600&h=600&fit=crop&q=85" alt="Environment">
+                    <img src="../screenshots/template-premium.svg" alt="Environment">
                 </div>
             </div>
         </div>
@@ -910,3 +910,4 @@
     </footer>
 </body>
 </html>
+
