--- a/ejemplos/template-tech.html
+++ b/ejemplos/template-tech.html
@@ -629,7 +629,7 @@
                 <li><a href="#testimonials">Reviews</a></li>
             </ul>
             <div class="nav-right">
-                <a href="../index.html#templates-section" class="nav-back">← Back to Demos</a>
+                <a href="../index.html#templates-section" class="nav-back">â† Back to Demos</a>
                 <button class="nav-cta">Buy Now</button>
             </div>
         </nav>
@@ -646,7 +646,7 @@
                 <button class="btn btn-secondary">Pre-order Now</button>
             </div>
             <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1505228395891-9a51e7e86e81?w=1200&h=700&fit=crop&q=85" alt="Tech Pro Device">
+                <img src="../screenshots/template-tech.svg" alt="Tech Products Template">
             </div>
         </div>
     </section>
@@ -656,7 +656,7 @@
         <div class="section-content">
             <h2>Performance Without Compromise</h2>
             <p>Lightning-fast processor, all-day battery, and advanced thermal management. The power you need with the efficiency you expect.</p>
-            <a href="#">Explore performance →</a>
+            <a href="#">Explore performance â†’</a>
         </div>
         <div class="section-image">
             <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=600&h=600&fit=crop&q=85" alt="Performance">
@@ -667,7 +667,7 @@
         <div class="section-content">
             <h2>Revolutionary Display</h2>
             <p>Immersive visuals with our ProMotion technology. 120Hz refresh rate delivers buttery smooth scrolling and incredible responsiveness.</p>
-            <a href="#">Discover the display →</a>
+            <a href="#">Discover the display â†’</a>
         </div>
         <div class="section-image">
             <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=600&fit=crop&q=85" alt="Display">
@@ -678,7 +678,7 @@
         <div class="section-content">
             <h2>Advanced Camera System</h2>
             <p>Professional-grade photography and videography in your pocket. Computational photography makes every shot extraordinary.</p>
-            <a href="#">See what's possible →</a>
+            <a href="#">See what's possible â†’</a>
         </div>
         <div class="section-image">
             <img src="https://images.unsplash.com/photo-1511376979264-c8ae135b11d0?w=600&h=600&fit=crop&q=85" alt="Camera">
@@ -717,32 +717,32 @@
             <p class="tech-subtitle">Every component designed to work in harmony</p>
             <div class="tech-grid">
                 <div class="tech-card">
-                    <div class="tech-icon">⚡</div>
+                    <div class="tech-icon">âš¡</div>
                     <h3>Lightning Fast</h3>
                     <p>Next-generation processor delivers groundbreaking speed and power efficiency for seamless performance.</p>
                 </div>
                 <div class="tech-card">
-                    <div class="tech-icon">🎥</div>
+                    <div class="tech-icon">ðŸŽ¥</div>
                     <h3>Pro Cameras</h3>
                     <p>Advanced optical system with computational photography that captures stunning images in any light.</p>
                 </div>
                 <div class="tech-card">
-                    <div class="tech-icon">🔋</div>
+                    <div class="tech-icon">ðŸ”‹</div>
                     <h3>All-Day Battery</h3>
                     <p>Intelligent power management keeps you going throughout the day and into the night.</p>
                 </div>
                 <div class="tech-card">
-                    <div class="tech-icon">🛡️</div>
+                    <div class="tech-icon">ðŸ›¡ï¸</div>
                     <h3>Privacy & Security</h3>
                     <p>Industry-leading security features protect your data with hardware-based security keys.</p>
                 </div>
                 <div class="tech-card">
-                    <div class="tech-icon">🌐</div>
+                    <div class="tech-icon">ðŸŒ</div>
                     <h3>5G Connectivity</h3>
                     <p>Ultra-fast 5G networks enable next-generation experiences with blazing-fast speeds.</p>
                 </div>
                 <div class="tech-card">
-                    <div class="tech-icon">♿</div>
+                    <div class="tech-icon">â™¿</div>
                     <h3>Accessibility</h3>
                     <p>Designed for everyone. Powerful accessibility features empower people of all abilities.</p>
                 </div>
@@ -834,3 +834,4 @@
     </footer>
 </body>
 </html>
+
