--- a/index.html
+++ b/index.html
@@ -1476,8 +1476,7 @@
     <div class="ejemplos-carousel">
       <!-- Row 1 -->
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">💻</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/template-tech.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Electrónica</p>
@@ -1488,8 +1487,7 @@
       </div>
 
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">✨</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/template-premium.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Premium</p>
@@ -1500,8 +1498,7 @@
       </div>
 
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">🌱</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/template-eco.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Sustentable</p>
@@ -1513,8 +1510,7 @@
 
       <!-- Row 2 -->
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">⚽</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/template-sport.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Deportivo</p>
@@ -1525,8 +1521,7 @@
       </div>
 
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">🎯</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/estilo-social-proof.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Estrategia</p>
@@ -1537,8 +1532,7 @@
       </div>
 
       <div class="ejemplo-card">
-        <div class="ejemplo-card-image">
-          <div class="ejemplo-card-icon">📊</div>
+        <div class="ejemplo-card-image" style="background-image: url('screenshots/estilo-data-driven.svg'); background-size: cover; background-position: center;">
         </div>
         <div class="ejemplo-card-body">
           <p class="ejemplo-card-category">Data-Driven</p>
