--- a/index.html
+++ b/index.html
@@ -1729,6 +1729,7 @@ body {
 <!-- ==============================
    NAVEGACIÓN ESTILO GLASSMORPHISM NARANJA
    ============================== -->
+  
 <nav>
   <div class="nav-container">
     <!-- Logo con efecto glassmorphism naranja -->
@@ -1760,7 +1761,19 @@ body {
           <a href="#proceso">Proceso</a>
         </div>
       </div>
-      
+      <header class="site-header">
+        <div class="header-content">
+            <div class="logo">YOUR LOGO</div>
+            <nav class="main-nav">
+                <a href="#home" class="active">Home</a>
+                <a href="#about">About</a>
+                <a href="#products">Products</a>
+                <a href="#services">Services</a>
+                <a href="#contact">Contact</a>
+            </nav>
+            <button class="menu-toggle">☰</button>
+        </div>
+    </header>
       <a href="#contacto">Contacto</a>
       <a href="#contacto" class="nav-cta">Agendar Llamada</a>
     </div>
