--- a/index.html
+++ b/index.html
@@ -1658,9 +1658,12 @@ body {
     
     <!-- Contenido Principal -->
     <div class="main-content-area">
-        <p class="subtitle">3D GLASSMORPHISM</p>
-        <h1>LANDING PAGE</h1>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h1>Diseño UX/UI<br>pensado para escalar</h1>
+        
+        <p>
+      Plantillas premium creadas con criterio de producto.
+      Claridad, foco y decisiones bien tomadas desde el inicio.
+    </p>
         <a href="#" class="btn-glass">Get Started</a>
     </div>
   </div>
