--- a/index.html
+++ b/index.html
@@ -134,6 +134,135 @@
       transform: scale(1.05);
       background: #c27256;
     }
+    /* ==============================
+       CAROUSEL 3D - COVERFLOW PREMIUM
+       ============================== */
+    .hero-carousel {
+      position: relative;
+      width: 100%;
+      height: 500px;
+      border-radius: 20px;
+      overflow: hidden;
+      perspective: 1400px;
+      background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 60px;
+    }
+
+    .carousel-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transform-style: preserve-3d;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .carousel-slide {
+      position: absolute;
+      width: 320px;
+      height: 400px;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      border-radius: 16px;
+      box-shadow: 
+        0 30px 80px rgba(0, 0, 0, 0.35),
+        0 10px 30px rgba(0, 0, 0, 0.22),
+        inset 0 1px 0 rgba(255, 255, 255, 0.1);
+      transition: 
+        transform 0.6s cubic-bezier(0.22, 0.61, 0.36, 1),
+        opacity 0.6s cubic-bezier(0.22, 0.61, 0.36, 1),
+        filter 0.6s cubic-bezier(0.22, 0.61, 0.36, 1);
+      will-change: transform, opacity;
+      backface-visibility: hidden;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .carousel-slide::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        135deg,
+        rgba(255, 255, 255, 0.15) 0%,
+        rgba(255, 255, 255, 0) 40%,
+        rgba(0, 0, 0, 0.1) 100%
+      );
+      border-radius: 16px;
+      pointer-events: none;
+      opacity: 0.8;
+    }
+
+    .carousel-slide:not(.active):hover {
+      filter: brightness(1.1) !important;
+    }
+
+    .carousel-slide.active {
+      z-index: 100;
+      transform: translate(-50%, -50%) translateZ(120px) scale(1.05);
+      opacity: 1;
+      filter: brightness(1) blur(0px);
+    }
+
+    .carousel-dots {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+      z-index: 200;
+      background: rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(10px);
+      padding: 8px 16px;
+      border-radius: 20px;
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.5);
+      cursor: pointer;
+      transition: all 0.3s cubic-bezier(0.22, 0.61, 0.36, 1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .dot:hover {
+      background: rgba(255, 255, 255, 0.8);
+      transform: scale(1.2);
+    }
+
+    .dot.active {
+      background: #fff;
+      width: 28px;
+      border-radius: 4px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .carousel-slide {
+        transition: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .hero-carousel {
+        height: 380px;
+      }
+      .carousel-slide {
+        width: 260px;
+        height: 340px;
+      }
+    }
 
     /* ==============================
        RESTANTE DEL CSS EXISTENTE (CON FONDOS BLANCOS)
