Update link to case study in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+F<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -1151,7 +1151,7 @@
           </div>
         </div>
         
-        <a href="https://github.com/dsd228/dsd228-paseo-ux-case-study" class="case-cta">
+        <a href="https://dsd228.github.io/dsd228-paseo-ux-case-study/" class="case-cta">
           Ver caso completo
           <i class="fas fa-arrow-right"></i>
         </a>
