--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
 
       <div class="case-visual">
         <img 
-          src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=90" 
+          src="app para paseadores de perros (20)/Reserva · Fecha y hora-guarderia.png" 
           alt="Dashboard FinTech rediseñado"
           class="case-image"
         >
@@ -1231,7 +1231,7 @@
   
   <div class="case-visual">
     <img 
-      src="HomeDesktop - 2.jpg" 
+      src="Rediseño del Sitio Web - Yale School of Art/HomeDesktop - 2.jpg" 
       alt="Rediseño e-commerce mobile-first"
       class="case-image"
     >
